fix: broken icon wrapper on safari. Fixes #79

--- a/src/components/projects-section/projects-carousel/slide/styles.module.css
+++ b/src/components/projects-section/projects-carousel/slide/styles.module.css
@@ -18,7 +18,6 @@
 
   .icon_circle {
     width: clamp(50px, 12%, 80px);
-    aspect-ratio: 1;
     background-color: var(--color-primary-dark);
     color: var(--color-neutral-lightest);
     border-radius: 100vh;
